--- a/css/estilios.css
+++ b/css/estilios.css
@@ -8,3 +8,39 @@ body {
 .bloco-esquerdo {
     padding: 25px 25px 0;
 }
+
+.bloco-esquerdo__empresa {
+    padding: 12px;
+    background-color: #F3F5F7;
+    border-radius: 10px;
+}
+
+
+.bloco-esquerdo__empresa-bloco {
+   
+}
+
+.info-propietario {
+    display: flex;
+    margin-top: 30px;
+    gap: 20px;
+}
+.bloco-esquerdo__empresa-logo__propietario .imagem-empresa {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    /* margin-left: 10px; */
+}
+
+
+.bloco-esquerdo__titulo-subtitulo-titulo-empresa {
+    font-size: 18px;
+    margin-bottom:8px;
+
+}
+
+.bloco-esquerdo__titulo-subtitulo-titulo-empresa-subtitulo {
+
+    font-size: 16px;
+    margin-bottom: 35px;
+}
