--- a/css/estilios.css
+++ b/css/estilios.css
@@ -4,6 +4,10 @@ body {
     height: 100vh;
 }
 
+:root{
+    --cor-cinza-bloco:#d0d7de;
+}
+
 
 .bloco-esquerdo {
     padding: 25px 25px 0;
@@ -14,6 +18,7 @@ body {
     background-color: #F3F5F7;
     border-radius: 10px;
     width: 178px;
+    margin-bottom: 35px;
 }
 
 
@@ -46,6 +51,11 @@ body {
     margin-bottom: 35px;
 }
 
+
+.bloco-esquerdo__empresa-bloco-configuracoes-lista {
+    border-top:1px solid var(--cor-cinza-bloco);
+    padding-top: 10px;
+}
 .bloco-esquerdo__empresa-bloco-configuracoes__link {
     display: flex;
     text-decoration: none;
@@ -58,3 +68,78 @@ body {
 .bloco-esquerdo__empresa-bloco-configuracoes__link i {
     font-size: 15px;
 }
+
+
+
+.bloco-movimentos {
+    margin-bottom: 30px;
+}
+
+
+.bloco-movimentos__item-lista {
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 5px;
+
+} 
+.bloco-movimentos__item-lista:hover{
+
+    background-color: #FFF1C2;
+ 
+}
+
+.bloco-movimentos__link {
+    display: flex;
+    text-decoration: none;
+    gap: 10px;
+    color: black;
+    font-size: 15px;
+
+}
+
+.bloco-movimentos__link i {
+    
+}
+
+.bloco-movimentos__titulo {
+
+}
+
+
+
+
+.bloco-gerenciar {
+    padding: 10px;
+}
+
+
+
+.bloco-gerenciar__titulo {
+    text-transform: uppercase;
+    font-size: 12px;
+    margin-bottom: 25px;
+}
+
+.bloco-gerenciar__item-lista {
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.bloco-gerenciar__item-lista:hover{
+    background-color: var(--cor-cinza-bloco);
+
+}
+
+.bloco-gerenciar__link {
+   display: flex;
+   text-decoration: none;
+   gap: 10px;
+}
+
+
+
+
+
+
+.bloco-principal {
+    border-left: 1px solid var(--cor-cinza-bloco);
