--- a/css/estilios.css
+++ b/css/estilios.css
@@ -1,6 +1,6 @@
 body {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 207px auto;
     height: 100vh;
 }
 
@@ -10,14 +10,14 @@ body {
 
 
 .bloco-esquerdo {
-    padding: 25px 25px 0;
+    padding: 16px 16px 0;
 }
 
 .bloco-esquerdo__empresa {
     padding: 12px;
     background-color: #F3F5F7;
     border-radius: 10px;
-    width: 178px;
+
     margin-bottom: 35px;
 }
 
@@ -40,7 +40,7 @@ body {
 
 
 .bloco-esquerdo__titulo-subtitulo-titulo-empresa {
-    font-size: 14px;
+    font-size: 12px;
     margin-bottom:8px;
 
 }
@@ -48,7 +48,7 @@ body {
 .bloco-esquerdo__titulo-subtitulo-titulo-empresa-subtitulo {
 
     font-size: 12px;
-    margin-bottom: 35px;
+    margin-bottom: 17px;
 }
 
 
@@ -93,7 +93,7 @@ body {
     text-decoration: none;
     gap: 10px;
     color: black;
-    font-size: 15px;
+    font-size: 13px;
 
 }
 
@@ -109,14 +109,14 @@ body {
 
 
 .bloco-gerenciar {
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 
 
 .bloco-gerenciar__titulo {
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 9px;
     margin-bottom: 25px;
 }
 
@@ -134,6 +134,8 @@ body {
    display: flex;
    text-decoration: none;
    gap: 10px;
+   font-size: 13px;
+   color: black;
 }
 
 
