--- a/css/estilios.css
+++ b/css/estilios.css
@@ -17,8 +17,8 @@ body {
     padding: 12px;
     background-color: #F3F5F7;
     border-radius: 10px;
-
     margin-bottom: 35px;
+    padding-bottom: 5px;
 }
 
 
@@ -61,8 +61,9 @@ body {
     text-decoration: none;
     gap: 10px;
     font-size: 12px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     color: black;
+    font-weight: bold;
 }
 
 .bloco-esquerdo__empresa-bloco-configuracoes__link i {
@@ -77,7 +78,7 @@ body {
 
 
 .bloco-movimentos__item-lista {
-    margin-bottom: 20px;
+    margin-bottom: 7px;
     padding: 10px;
     border-radius: 5px;
 
@@ -98,7 +99,7 @@ body {
 }
 
 .bloco-movimentos__link i {
-    
+    font-size: 15px;
 }
 
 .bloco-movimentos__titulo {
@@ -137,9 +138,12 @@ body {
    font-size: 13px;
    color: black;
 }
+.bloco-gerenciar__link i {
+    font-size: 15px;
+}
 
 
-
+/* ============ BLOCO ESQUERDO =========== */
 
 
 
