--- a/css/estilios.css
+++ b/css/estilios.css
@@ -219,6 +219,7 @@ body {
     border-radius:10px;
     cursor: pointer;
     box-sizing: border-box;
+    width: fit-content;
     
 }
 
@@ -227,7 +228,7 @@ body {
     font-size: 11px;
 }
 
- .cabecalho .cabecalho__btn--fechamento {
+  .cabecalho__btn--fechamento {
     display: flex;
     gap:8px;
     align-items: center;
