--- a/css/produtos.css
+++ b/css/produtos.css
@@ -105,13 +105,22 @@
 
 /* ============ BLOCO ESQUERDO =========== */
 
-
+.btn-branco {
+    background-color: transparent;
+    border: none;
+    border: 2px solid black;
+    color: black;
+}
 
   .cabecalho__btn--fechamento {
     display:none;
+   
 } 
 .cabecalho__btn--despesa {
-   border: 0;
+   border-radius: 0;
+   background-color: #FED74D;
+   color: #987601;
+   font-weight: bold;
 }
 
 .cabecalho__btn--despesa .cabecalho__btn-titulo {
