--- a/css/reset.css
+++ b/css/reset.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -50,3 +51,4 @@ table {
 button {
 	cursor: pointer;
 }
+
