arrumando o input quantidade

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -257,4 +257,16 @@
     margin-bottom: 15px;
     align-items: center;
 
+
 } 
+
+.bloco-flutuante-venda__quantidade__input {
+    border: none;
+    outline: none;
+}
+
+.quantidade__input-js {
+    
+    text-align: center;
+    
+}
