--- a/css/produtos.css
+++ b/css/produtos.css
@@ -293,3 +293,19 @@
     text-align: center;
     
 }
+
+.bloco-flutuante-venda__botao-adicionar {
+  background-color:rgb(23, 39, 50);
+  border: none;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  padding: 12px 24px;
+  border-radius:10px;
+  height: 48px;
+  font-weight: bold;
+
+
+}
