removendo bug em alturas e, telas menores que 1000px

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -324,3 +324,13 @@
 
 }
 
+@media screen and (max-height:1000px) {
+    .bloco-flutuante-venda__barra-scrrol {
+        height: 410px;  
+   }
+
+
+}
+
+
+
