--- a/css/produtos.css
+++ b/css/produtos.css
@@ -404,8 +404,12 @@
 }
 
 .pesquisa-produto-categorias__inventario-bloco i {
+    position: relative;
    font-size: 30px;
+   z-index: 5;
+ 
 }
+
 
 .pesquisa-produto-categorias-bloco {
     display: flex;
@@ -415,11 +419,15 @@
 }
 
 .pesquisa-produto-categorias__referencias-titulo {
+    font-size: 15px;
+    color:#778d9f;
+    font-weight: bold;
 
 }
 
 .pesquisa-produto-categorias__referencias-valor {
-
+    font-size: 20px;
+    font-weight: 700    ;
 }
 
 
