corrigindo a altura do bloco itens

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -440,10 +440,11 @@
 }
 
 .pesquisa-produto-produto__lista {
-    height: 100vh;
+    height: inherit;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     column-gap: 30px;
+    overflow: auto;
   
 
 }
