--- a/css/produtos.css
+++ b/css/produtos.css
@@ -200,16 +200,17 @@
 @media screen and (min-height:768px) {
     .bloco-flutuante-venda__barra-scrrol {
         
-        height: 300px;
+        height: 740px;
     }
 }
 
-@media screen and (min-height:767px) {
+/* @media screen and (min-height:767px) {
     .bloco-flutuante-venda__barra-scrrol {
         
         height:740px
     }
-}
+    
+     */
 
 
 .bloco-flutuante-venda__arquivo {
@@ -415,7 +416,7 @@
     box-shadow: 3px 7px 20px #d9d9d9;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 38px;
     height: 48px;
 }
 
@@ -423,6 +424,21 @@
     position: relative;
    font-size: 30px;
    z-index: 5;
+ 
+}
+
+.pesquisa-produto-categorias__inventario-bloco i::after {
+    content: "";
+    position: absolute;
+    width: 60px;
+    height: 50px;
+    background-color:#f3f5f7;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%);
+    z-index: -10;
+    border-radius: 50%;
+   
  
 }
 
