corrigindo o erro do custo do produto na tela do ususario

--- a/css/produtos.css
+++ b/css/produtos.css
@@ -533,8 +533,7 @@
 
 }
 .pesquisa-produto-produto__custo {
-    position: absolute;
-    top: -100000000000000000000;
+    display: none;
 }
 
 .pesquisa-produto-produto__nome {
